[package]
name = "pg2s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
postgres = "0.19.4"
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v7", "v4"] }
